# valv

./: .gitignore  .gitmodules  CONTRIBUTING.md  Cargo.toml  LICENSE  Makefile  README.md
.github/workflows/: integration-tests.yml  linting.yml  rust.yml
SPIN-verification/: LICENSE.txt  README.md  dist_coms.pml  model.pml  model_c.pml
crates/keystore/: Cargo.toml  build.rs
crates/keystore/proto/internal/: resources.proto
crates/keystore/proto/keystore/v1/: resources.proto  service.proto
crates/keystore/proto/valv/keystore/v1/: resources.proto  service.proto
crates/keystore/src/: api.rs  clock.rs  lib.rs  rotator.rs  tests.rs
crates/keystore/src/api/: server.rs
crates/keystore/src/cmd/: main.rs
crates/keystore/src/storage/: fdb.rs  interface.rs
crates/valv/: Cargo.toml  README.md  buf.gen.yaml  build.rs
crates/valv/proto/internal/: resources.proto
crates/valv/proto/valv/v1/: resources.proto  service.proto
crates/valv/src/: errors.rs  integration_tests.rs  lib.rs  main.rs  tests.rs
crates/valv/src/api/: server.rs
crates/valv/src/cmd/: main.rs
crates/valv/src/storage/: errors.rs  fdb.rs  interface.rs  mod.rs
examples/google-kms/: Cargo.toml  README.md  build.rs
examples/google-kms/src/: integration_tests.rs  main.rs  tests.rs
formal-verification/: README.md
