[package]
name = "keystore"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "keystore"
path = "src/lib.rs"

[[bin]]
name = "server"
path = "src/api.rs"

[dependencies]
boring = "4.1.0"
prost = "0.12.3"
prost-types = "0.12.3"
serde = { version = "1.0.193", features = ["derive"] }
serde_json = "1.0.108"
tonic = "0.10.2"

[build-dependencies]
tonic-build = { version = "0.10.2", features = ["prost"] }
