[package]
name = "keystore"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "keystore"
path = "src/lib.rs"

[[bin]]
name = "server"
path = "src/cmd/main.rs"

[dependencies]
anyhow = "1.0.79"
async-trait = "0.1.77"
bincode = "1.3.3"
boring = "4.1.0"
clap = { version = "4.4.16", features = ["derive"] }
foundationdb = { version = "0.9.0", features = ["fdb-7_1"] }
log = "0.4.22"
prost = "0.12.3"
prost-types = "0.12.3"
secrecy = "0.8.0"
serde = { version = "1.0.193", features = ["derive"] }
serde_json = "1.0.108"
thiserror = "1.0.56"
tokio = { version = "1.34.0", features = ["macros", "rt-multi-thread"] }
tonic = "0.10.2"

[build-dependencies]
tonic-build = { version = "0.10.2", features = ["prost"] }
