[package]
name = "valv"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
boring = "4.1.0"
prost = "0.12.3"
prost-types = "0.12.3"
tokio = { version = "1.34.0", features = ["macros", "rt-multi-thread"] }
tonic = "0.10.2"
keystore = {path = "../keystore"}

[build-dependencies]
prost-build = "0.12.3"
tonic-build = { version = "0.10.2", features = ["prost"] }
