[package]
name = "google-kms"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
boring = "4.1.0"
prost = "0.12.3"
prost-types = "0.12.3"
tokio = { version = "1.34.0", features = ["macros", "rt-multi-thread"] }
tonic = "0.10.2"
# valv = { git = "ssh://github.com/molnett/valv.git", package = "valv", branch = "public-preparation" }
valv = { path = "../../crates/valv" }
uuid = { version = "1.8.0", features = ["v4"] }
env_logger = "0.11.3"
log = "0.4.21"
foundationdb = { version = "0.9.0", features = ["fdb-7_1"] }
crc32c = "0.6.8"

[build-dependencies]
prost-build = "0.12.3"
tonic-build = { version = "0.10.2", features = ["prost"] }

[workspace]

[lints.clippy]
single_match = "warn"
single_match_else = "warn"
needless_match = "warn"
needless_late_init = "warn"
redundant_pattern_matching = "warn"
redundant_pattern = "warn"
redundant_guards = "warn"
collapsible_match = "warn"
match_single_binding = "warn"
match_same_arms = "warn"
match_ref_pats = "warn"
match_bool = "warn"
needless_bool = "deny"
unwrap_used = "warn"
expect_used = "warn"
